# diabetes-clasification

./: .gitignore  Diabetes_Analysis.ipynb  Diabetes_Analysis.ipynb.bak  README.md  main.py  pyproject.toml
docs/: comandos_git.md  limpieza_preprocesamiento.md  modelos_clasificacion.md  tareas_proyecto_diabetes.md  uv_guide.md
